--- a/config/dynniq.yaml
+++ b/config/dynniq.yaml
@@ -14,5 +14,9 @@ supervisor:
   status_response_timeout: 20
   status_update_timeout: 20
 
-connect_timeout: 10
-ready_timeout: 10
+connect_timeout: 60
+ready_timeout: 60
+
+command_timeout: 180
+status_timeout: 180
+subscribe_timeout: 180
