--- a/config/swarco.yaml
+++ b/config/swarco.yaml
@@ -4,6 +4,9 @@ supervisor:
       plans:
         - '8'
         - '9'
+      traffic_situation:
+        - '1'
+        - '2'
       intersections: 2
       components:
         KK+AG9998=001TC000:
