--- a/config/dynniq.yaml
+++ b/config/dynniq.yaml
@@ -10,10 +10,12 @@ supervisor:
       emergency_route:
         - '1'
       components:
-        :any:
-          traffic_controller: 'KK+AG9998=001TC000'
-          signal_group_prefix: 'KK+AG9998=001SG'
-          detector_logic_prefix: 'KK+AG9998=001DL'
+        main:
+          KK+AG9998=001TC000:
+        signal_group:
+          KK+AG9998=001SG001:
+        detector_logic:
+          KK+AG9998=001DL001:
   watchdog_interval: 60
   watchdog_timeout: 120
   acknowledgement_timeout: 20
