revert to using update rate from config, rather than 0

--- a/config/swarco.yaml
+++ b/config/swarco.yaml
@@ -31,6 +31,7 @@ ready_timeout: 10
 
 command_timeout: 180
 status_timeout: 180
+status_update_rate: 1
 subscribe_timeout: 180
 alarm_timeout: 180
 shutdown_timeout: 180
