use empty list for traffic situations in swarco config

--- a/config/swarco.yaml
+++ b/config/swarco.yaml
@@ -6,6 +6,7 @@ supervisor:
       plans:
         - 8
         - 9
+      traffic_situations: []
       emergency_routes:
         - 1
       inputs:
