--- a/config/dynniq.yaml
+++ b/config/dynniq.yaml
@@ -28,6 +28,7 @@ ready_timeout: 60
 
 command_timeout: 180
 status_timeout: 180
+status_update_rate: 1
 subscribe_timeout: 180
 alarm_timeout: 180
 shutdown_timeout: 180
