itc2.yml: Add secrets to workflow
These are just empty strings for testing purposes

--- a/.github/workflows/itc2.yml
+++ b/.github/workflows/itc2.yml
@@ -20,6 +20,11 @@ jobs:
     steps:
     - name: Configure test
       run: |
-        echo "rsmp_config_path: config/swarco.yaml" | tee config/validator.yaml
+        echo "rsmp_config_path: config/swarco.yaml" |
+        tee config/validator.yaml
+    - name: Set up secrets
+      run: |
+        echo -e "security_code:\n\t1: ''\n\t2: ''" |
+        tee config/secrets.yaml
     - name: Run tests
       run: bundle exec rspec spec/site
