Workflows: Print rsmp communication log

--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -20,11 +20,11 @@ jobs:
     steps:
     - name: Configure test
       run: |
-        echo "rsmp_config_path: config/dynniq.yaml" |
-        tee config/validator.yaml
+        echo "rsmp_config_path: config/dynniq.yaml" > config/validator.yaml
     - name: Set up secrets
       run: |
-        echo -e "security_codes:\n    1: ''\n    2: ''" |
-        tee config/secrets.yaml
+        echo -e "security_codes:\n    1: ''\n    2: ''" > config/secrets.yaml
     - name: Run tests
       run: bundle exec rspec spec/site
+    - name: Print validation.log
+      run: cat log/validation.log
