--- a/.github/workflows/itc2.yml
+++ b/.github/workflows/itc2.yml
@@ -18,6 +18,8 @@ jobs:
 
     runs-on: [ self-hosted, Linux, X64, itc2 ]
     steps:
+    - name: Check out repository
+      uses: actions/checkout@v2
     - name: Configure test
       shell: bash
       run: |
