workflows: Run bundle

--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -28,6 +28,10 @@ jobs:
       shell: bash
       run: |
         echo -e "security_codes:\n    1: ''\n    2: ''" > config/secrets.yaml
+    - name: Configure bundle
+      run: bundle config set path '~/rsmp_gems/bundle'
+    - name: Run bundle install
+      run: bundle install
     - name: Run tests
       run: bundle exec rspec spec/site
     - name: Upload validation.log
