--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -33,6 +33,7 @@ jobs:
     - name: Run bundle install
       run: bundle install
     - name: Run tests
+      continue-on-error: true
       run: bundle exec rspec spec/site
     - name: Upload validation.log
       uses: actions/upload-artifact@v1
