--- a/.github/workflows/itc2.yml
+++ b/.github/workflows/itc2.yml
@@ -34,11 +34,14 @@ jobs:
       run: bundle install
     - name: Run tests
       run: bundle exec rspec spec/site
+  log:
+    needs: test
+    if: always()
+    steps:
     - name: Upload validation.log
       uses: actions/upload-artifact@v1
       with:
         name: rspec validation
-        continue-on-error: true
         path: log/validation.log
     - name: Upload itc2 rsmp log
       uses: actions/upload-artifact@v1
