--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -35,6 +35,8 @@ jobs:
     - name: Run tests
       run: bundle exec rspec spec/site
   log:
+
+    runs-on: [ self-hosted, Linux, X64, ec2 ]
     needs: test
     if: always()
     steps:
