--- a/.github/workflows/itc2.yml
+++ b/.github/workflows/itc2.yml
@@ -48,5 +48,5 @@ jobs:
     - name: Upload itc2 rsmp log
       uses: actions/upload-artifact@v1
       with:
-        name: itc2 rsmp log
-        path: ~/simulator.log
+        name: Upload itc2 rsmp log
+        path: /tmp/simulator.log
