workflow: Use default log output instead of artifact
Test to not publish rsmp log as artifact but use default log output instead

--- a/.github/workflows/itc2.yml
+++ b/.github/workflows/itc2.yml
@@ -46,7 +46,4 @@ jobs:
         name: rspec validation
         path: log/validation.log
     - name: Upload itc2 rsmp log
-      uses: actions/upload-artifact@v1
-      with:
-        name: itc2 rsmp log
-        path: /tmp/simulator.log
+      run: cat /tmp/simulator.log
