--- a/.github/workflows/itc2.yml
+++ b/.github/workflows/itc2.yml
@@ -46,4 +46,7 @@ jobs:
         name: rspec validation
         path: log/validation.log
     - name: Upload itc2 rsmp log
-      run: cat /tmp/simulator.log
+      uses: actions/upload-artifact@v1
+      with:
+        name: itc2 rsmp log
+        path: /tmp/simulator.log
