--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Configure test
       shell: bash
       run: |
-        echo "rsmp_config_path: config/tlc.yaml" > config/validator.yaml
+        echo "rsmp_config_path: config/ruby.yaml" > config/validator.yaml
     - name: Set up secrets
       shell: bash
       run: |
