--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Run tests
       shell: bash
       run: |
-        bundle exec rsmp site --type tlc --json --config config/tlc.yaml > rsmp.log &
+        bundle exec rsmp site --type tlc --json --config config/tlc.yaml 2>&1 > rsmp.log &
         bundle exec rspec --tag '~script' spec/site
         kill %1
   log:
