workflows: Merge separate jobs in the each workflow to single job
Add missing if: always() to some tasks

--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -41,12 +41,14 @@ jobs:
         name: rspec validation
         path: log/validation.log
     - name: Get ec2 rsmp log
+      if: always()
       env:
         user: ${{ secrets.EC2_USER }}
         passwd: ${{ secrets.EC2_PASSWD }}
         ip: ${{ secrets.EC2_IP }}
       run: ncftpget -C -u "$user" -p "$passwd" "$ip" /tmp/proxyapp.log simulator.log
     - name: Upload ec2 rsmp log
+      if: always()
       uses: actions/upload-artifact@v1
       with:
         name: ec2 rsmp log
