config: Move config files used by CI to subdirectory (ci/)

--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Configure test
       shell: bash
       run: |
-        echo "rsmp_config_path: config/dynniq.yaml" > config/validator.yaml
+        echo "rsmp_config_path: config/ci/dynniq_ec2.yaml" > config/validator.yaml
     - name: Set up secrets
       shell: bash
       run: |
