workflow: Disable alarm test for ITC-2
Disable alarm for ITC-2 in order to investigate issue #56 and #57

--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Run bundle install
       run: bundle install
     - name: Run tests
-      run: bundle exec rspec spec/site
+      run: bundle exec rspec --tag '~script' spec/site
     - name: Rename validation.log
       if: always()
       run: mv log/validation.log log/validation_itc2_$(date +%F_%H-%M-%S).log
