workflows: restart rsmp service and clear buffer of itc-2

--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -32,6 +32,8 @@ jobs:
       run: bundle config set path '~/rsmp_gems/bundle'
     - name: Run bundle install
       run: bundle install
+    - name: Restart rsmp service and clear buffer
+      run: killall rsmpd
     - name: Run tests
       run: bundle exec rspec spec/site
     - name: Rename validation.log
