--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   test:
 
-    runs-on: [ self-hosted, Linux, X64, ec2 ]
+    runs-on: [ self-hosted, Windows, X64, ec2 ]
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
