--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         echo "security_codes:`n    1: ''`n    2: ''" > config/secrets.yaml
     - name: Set up ruby
-    - uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true # runs 'bundle install' and caches installed gems
     - name: Run tests
