--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Configure test
       run: |
-        "rsmp_config_path: config/ci/dynniq_ec2.yaml" | Out-File 'config/validator.yaml' - -Encoding utf8
+        "rsmp_config_path: config/ci/dynniq_ec2.yaml" | Out-File 'config/validator.yaml' -Encoding utf8
     - name: Set up secrets
       run: |
         echo "security_codes:`n    1: ''`n    2: ''" > config/secrets.yaml
