--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -49,13 +49,13 @@ jobs:
     - name: Get ec2 rsmp log
       if: always()
       env:
-        user: ${{ secrets.EC2_USER }}
-        passwd: ${{ secrets.EC2_PASSWD }}
-        ip: ${{ secrets.EC2_IP }}
+        USER: ${{ secrets.EC2_USER }}
+        PASSWD: ${{ secrets.EC2_PASSWD }}
+        IP: ${{ secrets.EC2_IP }}
       run: |
         Remove-Item Alias:curl
-        $remote_path='ftp://'+$ip+'/tmp/proxyapp.log'
-        curl -u $user+':'+$passwd $remote_path -o simulator.log
+        $remote_path='ftp://'+'$env:IP'+'/tmp/proxyapp.log'
+        curl -u '$env:USER'+':'+'$env:PASSWD' $remote_path -o simulator.log
     - name: Upload ec2 rsmp log
       if: always()
       uses: actions/upload-artifact@v2
