ec2 ci: fixes for powershell (5)

--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -54,8 +54,8 @@ jobs:
         IP: ${{ secrets.EC2_IP }}
       run: |
         Remove-Item Alias:curl
-        $remote_path='ftp://'+'$env:IP'+'/tmp/proxyapp.log'
-        curl -u '$env:USER'+':'+'$env:PASSWD' $remote_path -o simulator.log
+        $remote_path='ftp://'+$env:IP+'/tmp/proxyapp.log'
+        curl -u $env:USER+':'+$env:PASSWD $remote_path -o simulator.log
     - name: Upload ec2 rsmp log
       if: always()
       uses: actions/upload-artifact@v2
