--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -34,6 +34,8 @@ jobs:
       run: bundle install
     - name: Restart rsmp service and clear buffer
       run: killall rsmpd
+    - name: Set the time of the controller
+      run: /home/i0davla/set_date.sh
     - name: Run tests
       run: bundle exec rspec spec/site
     - name: Rename validation.log
