--- a/config/ci/rsmp_gem.yaml
+++ b/config/ci/rsmp_gem.yaml
@@ -1,42 +1,33 @@
-supervisor:
-  port: 13111
-  sites:
-    :any:
-      sxl: tlc
-      rsmp_versions:
-        - 3.1.5
-      plans:
-        - 1
-        - 2
-      traffic_situations:
-        - 1
-        - 2
-      emergency_routes:
-        - 1
-      inputs:
-        - 1
-      components:
-        main:
-          TC:
-        signal_group:
-          A1:
-          A2:
-          B1:
-          B2:
-        detector_logic:
-          DL1:
-  watchdog_interval: 0.1
-  watchdog_timeout: 1
-  acknowledgement_timeout: 1
-  command_response_timeout: 1
-  status_response_timeout: 1
-  status_update_timeout: 1
-
-connect_timeout: 1
-disconnect_timeout: 1
-ready_timeout: 1
-status_update_rate: 0   # rsmp only allow integer update rates
-subscribe_timeout: 1
-alarm_timeout: 1
-shutdown_timeout: 1
-command_timeout: 1
+port: 13111
+sxl: tlc
+intervals:
+  timer: 0.1
+  watchdog: 0.1
+timeouts:
+  watchdog: 1
+  acknowledgement: 1
+  connect: 1
+  ready: 1
+  status_response: 1
+  status_update: 1
+  subscribe: 1
+  command: 1
+  command_response: 1
+  alarm: 1
+  disconnect: 1
+  shutdown: 1
+components:
+  main:
+    TC:
+  signal_group:
+    A1:
+    A2:
+    B1:
+    B2:
+  detector_logic:
+    DL1:
+items:
+  plans: [1,2]
+  traffic_situations: [1,2]
+  emergency_routes: [1]
+  inputs: [1]
