--- a/config/ci/swarco_itc2.yaml
+++ b/config/ci/swarco_itc2.yaml
@@ -1,44 +1,33 @@
-# Config for testing swarco TLC simulator
-supervisor:
-  sites:
-    :any:
-      rsmp_versions:
-        - 3.1.2
-      plans:
-        - 1
-        - 2
-        - 3
-      traffic_situations: []
-      emergency_routes:
-        - 1
-      inputs:
-        - 1
-      components:
-        main:
-          KK+AG9998=001TC000:
-        signal_group:
-          KK+AG9998=001SG001:
-        detector_logic:
-          KK+AG9998=001DL001:
-  watchdog_interval: 60
-  watchdog_interval: 60
-  watchdog_timeout: 120
-  acknowledgement_timeout: 20
-  command_response_timeout: 20
-  status_response_timeout: 20
-  status_update_timeout: 20
-
-connect_timeout: 120
-disconnect_timeout: 120
-ready_timeout: 10
-
-command_timeout: 180
-status_timeout: 180
-status_update_rate: 1
-subscribe_timeout: 180
-alarm_timeout: 180
-shutdown_timeout: 180
-
+port: 13111
+sxl: tlc
+intervals:
+  timer: 1
+  watchdog: 60
+timeouts:
+  watchdog: 120
+  acknowledgement: 20
+  connect: 120
+  ready: 60
+  status_response: 60
+  status_update: 60
+  subscribe: 60
+  command: 180
+  command_response: 180
+  alarm: 60
+  disconnect: 120
+  shutdown: 180
+components:
+  main:
+    KK+AG9998=001TC000:
+  signal_group:
+    KK+AG9998=001SG001:
+  detector_logic:
+    KK+AG9998=001DL001:
+items:
+  plans: [1,2,3]
+  traffic_situations: []
+  emergency_routes: [1]
+  inputs: [1]
 scripts:
   activate_alarm: '/home/i0davla/activate_alarm.sh'
   deactivate_alarm: '/home/i0davla/deactivate_alarm.sh'
