work on config guide, update secrets handling

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ log
 .rspec_status
 .rspec-local
 .DS_Store
-config/secrets*.yaml
+config/*secrets.yaml
 !config/secrets_example.yaml
 config/validator.yaml
 config/private/
@@ -14,4 +14,4 @@ config/private/
 /pkg/
 /spec/reports/
 /tmp/
-
+/ignore/
