fix bundle exec

--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Run tests
       shell: bash
       run: |
-        be rsmp supervisor --json --config config/ci/simulator/supervisor.yaml 2>&1 > simulator.log &
+        bundle exec rsmp supervisor --json --config config/ci/simulator/supervisor.yaml 2>&1 > simulator.log &
         SUPERVISOR_CONFIG=config/ci/gem_supervisor.yaml bundle exec rspec --tag '~script' spec/supervisor
         kill %1
     - name: Rename validation.log
