--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -31,6 +31,7 @@ jobs:
       shell: bash
       run: SUPERVISOR_CONFIG=config/ci/gem_supervisor.yaml bundle exec rspec --tag '~script' spec/supervisor
     - name: Stop supervisor
+      if: always()
       shell: bash
       run: kill %?rsmp\ supervisor
     - name: Rename validation.log
