--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -27,8 +27,7 @@ jobs:
     - name: Start supervisor
       shell: bash
       run: |
-        ps aux | grep rsmp
-        bundle exec rsmp supervisor --json --config config/ci/simulator/supervisor.yaml 2>&1 > simulator.log
+        bundle exec rsmp supervisor --json --config config/ci/simulator/supervisor.yaml 2>&1 > simulator.log &
     - name: Run tests
       shell: bash
       run: bundle exec rspec --tag '~script' spec/supervisor
