--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Configure test
       run: |
-        "site: config/ci/dynniq_ec2.yaml" | Out-File 'config/validator.yaml' -Encoding utf8
+        "site: config/dynniq_ec2.yaml" | Out-File 'config/validator.yaml' -Encoding utf8
     - name: Set up ruby
       uses: ruby/setup-ruby@v1
       env:
