--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -4,7 +4,7 @@
 # documentation.
 # This workflow will run rspec
 
-name: Gem site
+name: Gem TLC
 
 on:
   push:
@@ -15,7 +15,6 @@ on:
 
 jobs:
   test:
-
     runs-on: [ self-hosted, Linux, X64 ]
     steps:
     - name: Check out repository
@@ -24,12 +23,14 @@ jobs:
       run: bundle config set path '~/rsmp_gems/bundle'
     - name: Run bundle install
       run: bundle install
+    - name: Start TLC in background
+      shell: bash
+      run: bundle exec rsmp site --type tlc --config config/simulator/tlc.yaml 2>&1 > simulator.log &
     - name: Run tests
       shell: bash
-      run: |
-        bundle exec rsmp site --type tlc --json --config config/ci/simulator/tlc.yaml 2>&1 > simulator.log &
-        SITE_CONFIG=config/ci/gem.yaml bundle exec rspec --tag '~script' spec/site
-        kill %1
+      run: bundle exec rspec --tag '~script' spec/site
+      env:
+        SITE_CONFIG: config/gem_tcl.yaml
     - name: Rename validation.log
       if: always()
       run: mv log/validation.log log/validation_ruby_$(date +%F_%H-%M-%S).log
