--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -27,7 +27,9 @@ jobs:
     - name: Set the time of the controller
       run: /home/i0davla/set_date.sh
     - name: Run tests
-      run: SITE_CONFIG=config/ci/swarco_itc2.yaml bundle exec rspec spec/site
+      run: bundle exec rspec spec/site
+      env:
+        SITE_CONFIG: config/swarco_itc2.yaml
     - name: Rename validation.log
       if: always()
       run: mv log/validation.log log/validation_itc2_$(date +%F_%H-%M-%S).log
