--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -39,7 +39,7 @@ jobs:
       run: mv log/validation.log log/validation_itc2_$(date +%F_%H-%M-%S).log
     - name: Stop ITC-2 simulator
       if: always()
-      run: virsh shutdown ts1001
+      run: virsh -c qemu:///system shutdown ts1001
     - name: Upload validation.log
       if: always()
       uses: actions/upload-artifact@v2
