--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -24,8 +24,12 @@ jobs:
       run: bundle config set path '~/rsmp_gems/bundle'
     - name: Run bundle install
       run: bundle install
+    - name: Start ITC-2 simulator
+      run: virsh -c qemu:///system start ts1001
+    - name: Wait for ITC-2 simulator to start
+      run: sleep 30s
     - name: Set the time of the controller
-      run: /home/i0davla/set_date.sh
+      run: ssh 192.168.103.205 ./set_date.sh
     - name: Run tests
       run: bundle exec rspec spec/site
       env:
@@ -33,6 +37,12 @@ jobs:
     - name: Rename validation.log
       if: always()
       run: mv log/validation.log log/validation_itc2_$(date +%F_%H-%M-%S).log
+    - name: Fetch itc2 rsmp log
+      if: always()
+      run: scp 192.168.103.205:/tmp/simulator.log /tmp/simulator.log
+    - name: Stop ITC-2 simulator
+      if: always()
+      run: virsh -c qemu:///system shutdown ts1001
     - name: Upload validation.log
       if: always()
       uses: actions/upload-artifact@v2
