--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -34,6 +34,9 @@ jobs:
       run: bundle exec rspec spec/site
       env:
         SITE_CONFIG: config/swarco_itc2.yaml
+    - name: Show validation.log
+      if: always()
+      run: cat log/validation.log
     - name: Rename validation.log
       if: always()
       run: mv log/validation.log log/validation_itc2_$(date +%F_%H-%M-%S).log
