--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -32,6 +32,9 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems
     - name: Run tests
       run: bundle exec rspec spec/site
+    - name: Show validation.log
+      if: always()
+      run: cat log/validation.log
     - name: Rename validation.log
       if: always()
       run: |
