--- a/.github/workflows/gem_tlc.yml
+++ b/.github/workflows/gem_tlc.yml
@@ -31,7 +31,7 @@ jobs:
       run: bundle exec rspec --format Brief --format Details --out log/validation.log --tag '~script' spec/site
       env:
         SITE_CONFIG: config/gem_tlc.yaml
-    - name: Show validation.log
+    - name: Show detailed log
       if: always()
       run: cat log/validation.log
     - name: Rename validation.log
