add docs folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
 log
 .rspec_status
 .rspec-local
-.DS_Store
 config/*secrets.yaml
 !config/secrets_example.yaml
 config/validator.yaml
 config/private/
 /.bundle/
 /.yardoc
-/_yardoc/
 /coverage/
-/docs/
 /pkg/
 /spec/reports/
 /tmp/
 /ignore/
+/docs/dev/
