--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -64,7 +64,7 @@ aux_links:
     - "https://rsmp-nordic.org"
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/images/rsmp_logo.png"
+#logo: "/assets/images/rsmp_logo.png"
 
 # Use our custom theme
 color_scheme: rsmp
