--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -8,24 +8,38 @@ on:
 
 jobs:
   build:
-    name: Build YARD doc and update the gh-pages branch
+    name: Rebuild YARD docs and update the gh-pages branch
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
         with:
           ref: gh-pages
+          fetch-depth: 0
 
-      - name: Install dependencies
-        run: bundle
+      - name: Install Ruby and Gems
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+      - name: Set git indentity
+        run: |
+          git config user.name "GitHub Action"
+          git config user.email "<>"
+
+      - name: Merge branch
+        run: git merge origin/master
 
       - name: Update YARD docs
-        run: git checkout master --no-overlay -- docs
         run: bundle exec yardoc
+      
+      - name: Commit changes
+        run: |
+          git add docs/dev -f
+          git commit -m "rebuild yard docs"
 
-#      - name: Commit changes
-#        uses: EndBug/add-and-commit@v7
-#        with:
-#          default_author: github_actor
-#          message: 'Automatically update documentation'
-#          add: 'docs'
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
