CI: Rename remote dispatch init and add comments

--- a/.github/workflows/remote_dispatch_init.yml
+++ b/.github/workflows/remote_dispatch_init.yml
@@ -1,3 +1,5 @@
+# Run equipment tests in rsmp_implementations
+
 name: Remote Dispatch Action Initiator
 
 on:
@@ -9,12 +11,12 @@ on:
   repository_dispatch:
 
 jobs:
-  ping-pong:
+  equipment_tests:
     runs-on: ubuntu-latest
     steps:
-      - name: PING - Dispatch initiating repository event
+      - name: Run equipment tests in rsmp_implementations
         run: |
           curl -X POST https://api.github.com/repos/rsmp-nordic/rsmp_implementations/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          --data '{"event_type": "trigger_equipment_tests", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
