Revert "CI: Include github.ref in trigger_equipment_tests in order to use correct branch"
Revert peter-evans/repository-dispatch@v1 since it complains with "bad credentials"

This reverts commit d871c9e627844c846f8b59c1333cc0dfeefb2eae.

--- a/.github/workflows/trigger_equipment_tests.yml
+++ b/.github/workflows/trigger_equipment_tests.yml
@@ -15,9 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger equipment tests in rsmp_implementations
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.ACCESS_TOKEN }}
-          repository: rsmp-nordic/rsmp_implementations
-          event-type: trigger_equipment_tests
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+        run: |
+          curl -X POST https://api.github.com/repos/rsmp-nordic/rsmp_implementations/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.ACCESS_TOKEN }} \
+          --data '{"event_type": "trigger_equipment_tests", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
