CI: equipment test: Add github.ref in order to use correct branch

--- a/.github/workflows/trigger_equipment_tests.yml
+++ b/.github/workflows/trigger_equipment_tests.yml
@@ -19,4 +19,4 @@ jobs:
           curl -X POST https://api.github.com/repos/rsmp-nordic/rsmp_implementations/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "trigger_equipment_tests", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          --data '{"event_type": "trigger_equipment_tests", "client_payload": { "ref": "${{ github.ref }}" }}'
